# ChangeLog for net-analyzer/sara
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/ChangeLog,v 1.20 2007/05/01 22:27:45 genone Exp $

  01 May 2007; Marius Mauch <genone@gentoo.org> sara-6.0.4.ebuild,
  sara-6.0.7d.ebuild, sara-7.0.3b.ebuild:
  Replacing einfo with elog

*sara-7.0.3b (03 Feb 2007)

  03 Feb 2007; Jason Wever <weeve@gentoo.org> +sara-7.0.3b.ebuild:
  Version bump and the addition of the ~sparc keyword.

  03 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> sara-6.0.4.ebuild,
  sara-6.0.7d.ebuild:
  Depend on tcsh-6.14-r3 to fix bug 119426 regarding missing csh. Thanks to
  Erol Kutay <ekutay at goldmail dot de> and Fabian Groffen <grobian at gentoo
  dot org>.

  20 Jan 2006; Peter Volkov <pva@gentoo.org> sara-6.0.4.ebuild,
  sara-6.0.7d.ebuild:
  Modular X dependencies are fixed.

*sara-6.0.7d (09 Jan 2006)

  09 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> -sara-6.0.6.ebuild,
  +sara-6.0.7d.ebuild:
  6.0.7d version bump.

  12 Oct 2005; Luis Medinas <metalgod@gentoo.org> sara-6.0.6.ebuild:
  Added ~amd64 keyword. Bug #108327.

*sara-6.0.6 (05 Sep 2005)

  05 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> +sara-6.0.6.ebuild:
  Version bump.

  25 Jul 2005; Marcelo Goes <vanquirius@gentoo.org> -sara-5.1.1a.ebuild,
  -sara-5.2.0a.ebuild, -sara-6.0.1.ebuild, sara-6.0.4.ebuild:
  Marked 6.0.4 x86 stable, removed previous versions. It should fix bug 69638.
  Thanks to Michael Forbes <miforbes-gentoo-org@mbhs.edu>, Kyle England
  <kengland@gentoo.org> and others.

*sara-6.0.4 (22 Jun 2005)

  22 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> sara-6.0.1.ebuild,
  +sara-6.0.4.ebuild:
  Add -j1 to emake as it does not like to build in parallel. Version bump.

  22 Mar 2005; Marcelo Goes <vanquirius@gentoo.org> -sara-5.0.5b.ebuild,
  sara-5.1.1a.ebuild, sara-5.2.0a.ebuild, sara-6.0.1.ebuild:
  Removed unnecessary src_compile from ebuilds, old ebuild.

*sara-6.0.1 (22 Mar 2005)
