@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/sara
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/ChangeLog,v 1.20 2007/05/01 22:27:45 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/ChangeLog,v 1.21 2007/07/02 14:40:29 peper Exp $
+
+  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> sara-6.0.4.ebuild,
+  sara-6.0.7d.ebuild, sara-7.0.3b.ebuild:
+  (QA) RESTRICT clean up.
 
   01 May 2007; Marius Mauch <genone@gentoo.org> sara-6.0.4.ebuild,
   sara-6.0.7d.ebuild, sara-7.0.3b.ebuild:
